--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -39,5 +35,7 @@
     <modules>
         <module>sso</module>
         <module>products</module>
+        <module>gateway</module>
+        <module>discovery</module>
     </modules>
 </project>
