--- a/products/src/main/resources/application.properties
+++ b/products/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.password=password
 
-server.port=8081
+server.port=0
 
 spring.jpa.hibernate.ddl-auto=none
-eureka.client.register-with-eureka=false
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
+management.endpoints.web.exposure.include=health, info
