--- a/sso/src/main/resources/application.properties
+++ b/sso/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=sso
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.password=password
-
+server.port=8082
 spring.jpa.hibernate.ddl-auto=none
-eureka.client.register-with-eureka=false
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
+management.endpoints.web.exposure.include=health, info
