--- a/products/src/main/resources/application.properties
+++ b/products/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=products
+spring.application.name=nutrition
 
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
