feat: добавлена сущность упражнения

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -16,6 +16,12 @@ spring:
             - Path=/sso/**
           filters:
             - StripPrefix=1
+        - id: trainings_route
+          uri: lb://trainings
+          predicates:
+            - Path=/trainings/**
+          filters:
+            - StripPrefix=1
 
 eureka:
   instance:
