--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
         <module>products</module>
         <module>gateway</module>
         <module>discovery</module>
+        <module>trainings</module>
     </modules>
 </project>
