--- a/trainings/pom.xml
+++ b/trainings/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>3.7.4</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
